objects/LAT_StrategicObjectives__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Status__c</fullName>
        <label>Status Atual</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_goal__c</fullName>
        <label>Meta Faturamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Counterparts__c</fullName>
        <label>Contrapartidas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coverage_goal__c</fullName>
        <label>Meta Cobertura</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Meta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Indicators__c</fullName>
        <label>Indicadores</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Negotiation_argument__c</fullName>
        <label>Argumento de Negociação</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Box__c</fullName>
        <label>Meta em Caixa</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Value_Goal__c</fullName>
        <label>Meta em valor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>objetive__c</fullName>
        <label>Definição de Objetivos</label>
        <referenceTo>LAT_ObjectivesDefinition__c</referenceTo>
        <relationshipLabel>Objetivos Estratégicos</relationshipLabel>
        <relationshipName>objetivesDefinition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>strategic_objectives__c</fullName>
        <label>Objetivos estratégicos (SMART)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Objetivos Estratégicos</label>
    <nameField>
        <displayFormat>OBE-{000}</displayFormat>
        <label>Objetivos Estratégicos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objetivos Estratégicos</pluralLabel>
    <recordTypes>
        <fullName>LAT_Distribuicao</fullName>
        <active>true</active>
        <label>Distribuição</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Modern_Trade</fullName>
        <active>true</active>
        <label>Modern Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_On_Trade</fullName>
        <active>true</active>
        <label>On Trade\Eventos</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>